@@ -1800,7 +1800,10 @@ int writemsg(msg * m)
 	{
 	    if (SW->msgids)
 	    {
-		sprintf(text, "\01MSGID: %s %08lx\r", show_address(&from), now);
+		sprintf(text, "\01MSGID: %s %08lx\r",
+                        SW->domainmsgid ? show_address(&from) : show_4d(&from),
+                        now);
+
 		now++;
 		curr = InsertAfter(curr, text);
 	    }
